--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,26 @@
     </head>
     <body>
         <h1>Lasagna Recipe</h1>
+        <img src="https://static01.nyt.com/images/2023/08/31/multimedia/RS-Lasagna-hkjl/RS-Lasagna-hkjl-verticalTwoByThree735.jpg" 
+        alt="Lasagna ready to serve" width="300" height="420">
+        <h2>Description</h2>
+        <p>To prepare lasagna from scratch, you start by making sauce, then layer it with wide, flat lasagna noodles and cheese before baking. The sauces can vary from tomato-based sauce, with or without meat, to creamy bechamel sauce, which works well with a wide variety of vegetables.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pound ground beef chuck.</li>
+            <li>1/2 medium onion, diced (about 3/4 cup)</li>
+            <li>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</li>
+            <li>2 cloves garlic, minced.</li>
+            <li>1 (28-ounce)can good-quality tomato sauce.</li>
+            <li>3 ounces tomato paste (half a 6-ounce can)</li>
+            <li>1 (14 ounce) can crushed tomatoes.</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li><strong>Start by making the sauce</strong> with ground beef, bell peppers, onions, and a combo of tomato sauce, tomato paste, and crushed tomatoes. The three kinds of tomatoes gives the sauce great depth of flavor.</li>
+            <li><strong>Let this simmer while you boil the noodles and get the cheeses ready.</strong> We're using ricotta, shredded mozzarella, and parmesan -- like the mix of tomatoes, this 3-cheese blend gives the lasagna great flavor!</li>
+            <li><strong>From there, it's just an assembly job.<strong> A cup of meat sauce, a layer of noodles, more sauce, followed by a layer of cheese. Repeat until you have three layers and have used up all the ingredients.</li>
+            <li><strong>Bake until bubbly and you're ready to eat!</strong></li>
+        </ol>
     </body>
 </html>
