--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html" target="_blank">Lasagna Recipe</a></li>
+        <li><a href="./recipes/buns.html" target="_blank">Belle's Hamburger Buns Recipe</li>
+        <li><a href="./recipes/lemonade.html" target="_blank">Vintage Lemonade Recipe</li>
+    </ul>
 </body>
 </html>
