add title, heading, description section

--- a/recipes/buns.html
+++ b/recipes/buns.html
@@ -6,6 +6,14 @@
     </head>
 
     <body>
-        
+        <h1>Belle's Hamburger Buns Recipe</h1>
+        <img src="https://www.allrecipes.com/thmb/cPjxWAmp-kUJiOniH5jfPGub7ug=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1073329-belles-hamburger-buns-vrinda-4x3-1-10f86efd183744f0a42d751f7989968a.jpg" 
+        width="350" height="300">
+        <h2>Description</h2>
+        <p><strong>Prep Time:</strong> 2 hrs</p>
+        <p><strong>Cook Time:</strong> 20 mins</p>
+        <p><strong>Total Time:</strong> 2 hrs 20 mins</p>
+        <p><strong>Servings:</strong> 12</p>
+        <p><strong>Yield:</strong> 12 buns</p>
     </body>
 </html>
