add ingredients section

--- a/recipes/buns.html
+++ b/recipes/buns.html
@@ -15,6 +15,18 @@
         <p><strong>Total Time:</strong> 2 hrs 20 mins</p>
         <p><strong>Servings:</strong> 12</p>
         <p><strong>Yield:</strong> 12 buns</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 cup milk</li>
+            <li>1 cup water</li>
+            <li>2 tablespoons butter</li>
+            <li>1 tablespoon white sugar</li>
+            <li>1 ½ teaspoons salt</li>
+            <li>5 ½ cups all-purpose flour</li>
+            <li>1 (.25 ounce) envelope active dry yeast</li>
+            <li>1 egg yolk</li>
+            <li>1 egg yolk</li>
+        </ul>
         <h2>Steps</h2>
         <ol>
             <li>Combine the milk, 1 cup of water, butter, sugar and salt in a saucepan. Bring to a boil then remove from the heat and let stand until lukewarm. If the mixture is too hot, it will kill the yeast.</li>
