--- a/recipes/lemonade.html
+++ b/recipes/lemonade.html
@@ -7,5 +7,7 @@
 
     <body>
         <h1>Vintage Lemonade Recipe</h1>
+        <img src="https://www.allrecipes.com/thmb/c_m5hm-nhFkwAZcfrJHO43UT0bs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/445156_Vintage-Lemonade-4x3-195c79927325479bb7848ece5cab897f.jpg"
+        alt="Lemonade" width="450" height="350">
     </body>
 </html>
