--- a/recipes/lemonade.html
+++ b/recipes/lemonade.html
@@ -9,5 +9,11 @@
         <h1>Vintage Lemonade Recipe</h1>
         <img src="https://www.allrecipes.com/thmb/c_m5hm-nhFkwAZcfrJHO43UT0bs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/445156_Vintage-Lemonade-4x3-195c79927325479bb7848ece5cab897f.jpg"
         alt="Lemonade" width="450" height="350">
+        <h2>Description</h2>
+        <p><strong>Prep Time:</strong>45 mins</p>
+        <p><strong>Cook Time:</strong> 20 mins</p>
+        <p><strong>Total Time:</strong> 1 hr 5 mins</p>
+        <p><strong>Servings:</strong> 4</p>
+        <p><strong>Yield:</strong> 4 servings</p>
     </body>
 </html>
