--- a/recipes/lemonade.html
+++ b/recipes/lemonade.html
@@ -15,5 +15,18 @@
         <p><strong>Total Time:</strong> 1 hr 5 mins</p>
         <p><strong>Servings:</strong> 4</p>
         <p><strong>Yield:</strong> 4 servings</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>5 lemons</li>
+            <li>1 ¼ cups white sugar</li>
+            <li>1 ¼ quarts water</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Peel the rinds from the 5 lemons and cut them into 1/2 inch slices. Set the lemons aside.</li>
+            <li>Place the rinds in a bowl and sprinkle the sugar over them. Let this stand for about one hour, so that the sugar begins to soak up the oils from the lemons.</li>
+            <li>Bring water to a boil in a covered saucepan and then pour the hot water over the sugared lemon rinds. Allow this mixture to cool for 20 minutes and then remove the rinds.</li>
+            <li>Squeeze the lemons into another bowl. Pour the juice through a strainer into the sugar mixture. Stir well, pour into pitcher and pop it in the fridge! Serve with ice cubes.</li>
+        </ol>
     </body>
 </html>
