add link to main page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/lasagna.html" target="_blank">Lasagna Recipe</a></li>
-        <li><a href="./recipes/buns.html" target="_blank">Belle's Hamburger Buns Recipe</li>
-        <li><a href="./recipes/lemonade.html" target="_blank">Vintage Lemonade Recipe</li>
+        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/buns.html">Belle's Hamburger Buns Recipe</li>
+        <li><a href="./recipes/lemonade.html">Vintage Lemonade Recipe</li>
     </ul>
 </body>
 </html>
