--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -27,5 +27,6 @@
             <li><strong>From there, it's just an assembly job.<strong> A cup of meat sauce, a layer of noodles, more sauce, followed by a layer of cheese. Repeat until you have three layers and have used up all the ingredients.</li>
             <li><strong>Bake until bubbly and you're ready to eat!</strong></li>
         </ol>
+        <a href="../index.html">Return to main page</a>
     </body>
 </html>
