--- a/recipes/lemonade.html
+++ b/recipes/lemonade.html
@@ -28,5 +28,6 @@
             <li>Bring water to a boil in a covered saucepan and then pour the hot water over the sugared lemon rinds. Allow this mixture to cool for 20 minutes and then remove the rinds.</li>
             <li>Squeeze the lemons into another bowl. Pour the juice through a strainer into the sugar mixture. Stir well, pour into pitcher and pop it in the fridge! Serve with ice cubes.</li>
         </ol>
+        <a href="../index.html">Return to main page</a>
     </body>
 </html>
