--- a/recipes/buns.html
+++ b/recipes/buns.html
@@ -35,5 +35,6 @@
             <li>Preheat the oven to 400 degrees F (200 degrees C). Mix together the egg yolk and 1 tablespoon of water in a cup or small bowl. Brush onto the tops of the rolls. Position 2 oven racks so they are not too close to the top or bottom of the oven.</li>
             <li>Bake for 10 minutes in the preheated oven. Remove the rolls from the oven and return them to different shelves so each one spends a little time on the top. Continue to bake for another 5 to 10 minutes, or until nicely browned on the top and bottom.</li>
         </ol>
+        <a href="../index.html">Return to main page</a>
     </body>
 </html>
